Change company's name in footer. Add link.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <header class="background">
             <div class="section group">
                 <div class="col span_7_of_12">   
-                    <a href="#" class="product">
+                    <a href="http://www.sanartspb.ru/" class="product">
                         Автохимия от компании SANART+
                     </a>
                 </div>
@@ -611,7 +611,7 @@
                                         <b>АРТ.</b> 018 4000 06
                                     </span>
                                     <span class="volume-product">
-                                        <b>Объем</b> 400 ml
+                                        <b>Объем</b> 4000 ml
                                     </span>
                                     <span class="cost-product">
                                         <b>Цена</b> ???
@@ -742,12 +742,12 @@
                                     </h3>
                                     <p>
                                         Компания
-                                        <a href="#">
+                                        <a href="http://www.din-tech.ru/">
                                             «ДИН Технолоджи»
                                         </a>
                                         является 
                                         официальным импортёром и поставщиком 
-                                        автохимииSANART+ на территории 
+                                        автохимии SANART+ на территории 
                                         Северо-Западного региона и Урала.
                                     </p>
                                     <p>
@@ -756,7 +756,7 @@
                                         ул. Орджоникидзе, д. 44/3, лит. Б
                                     </p>
                                     <p>
-                                        <a href="#">
+                                        <a href="http://www.din-tech.ru/globepromo/dintech-company-profile.pdf">
                                             Скачать реквизиты (PDF)
                                         </a>
                                     </p>
@@ -777,7 +777,7 @@
                                         потребуются ваши реквизиты. Пришлите их,
                                         пожалуйста, по электронной почте на 
                                         адрес
-                                        <a href="#">
+                                        <a href="mailto:office@dintechnology.ru">
                                             office@dintechnology.ru
                                         </a>
                                     </p>
@@ -818,7 +818,7 @@
         <!-- FOOTER -->
         
         <footer class="background">
-            <a href="#">Din-Technology 2015</a>
+            <a href="http://www.din-tech.ru/">DIN-Technology 2015</a>
         </footer>
         
         <!-- END -->
