Changed address company and phone.

--- a/index.html
+++ b/index.html
@@ -753,7 +753,10 @@
                                     <p>
                                         ИНН 7810841942<br>
                                         ОГРН 1117847413496<br>
-                                        ул. Орджоникидзе, д. 44/3, лит. Б
+                                        адрес: г. Санкт-Петербург, ул. 
+                                        Орджоникидзе д. 42, лит. Б, офис 307<br>
+                                        телефоны: 372-67-86, 997-43-48<br>
+                                        8-921-996-561-64
                                     </p>
                                     <p>
                                         <a href="http://www.din-tech.ru/globepromo/dintech-company-profile.pdf">
