Deleted link in name site, add link to e-mail address in header, changed phone.

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <header class="background">
             <div class="section group">
                 <div class="col span_7_of_12">   
-                    <a href="http://www.sanartspb.ru/" class="product">
+                    <span class="product">
                         Автохимия от компании SANART+
-                    </a>
+                    </span>
                 </div>
                 <div class="col span_2_of_12">   
                     <span class="phone-company color-ver2">
@@ -32,9 +32,9 @@
                     </span>
                 </div>
                 <div class="col span_2_of_12">   
-                    <span class="mail-company color-ver2" id="e_mail_din_tech">
+                    <a href="mailto:office@dintechnology.ru" class="mail-company">
                         office@dintechnology.ru
-                    </span>
+                    </a>
                 </div>            
             </div>
         </header>
@@ -739,7 +739,7 @@
                                         адрес: г. Санкт-Петербург, ул. 
                                         Орджоникидзе д. 42, лит. Б, офис 307<br>
                                         телефоны: 372-67-86, 997-43-48<br>
-                                        8-921-996-561-64
+                                        8-921-996-51-64
                                     </p>
                                     <p>
                                         <a href="http://www.din-tech.ru/globepromo/dintech-company-profile.pdf">
